client/src/index.css
:root {
  --primary-color: #173068;
  --secondary-color: #ffffff;
  --tertiary-color: #ff0100;
  --accent-color: #30e4eb;
  --container-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

html, body {
  max-width: 100%;
  overflow-x: hidden;
  font-family: "Montserrat", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}

